# ImageProc

./: CMakeLists.txt
base/include/: ColourBalance.h  ColourBrightness.h  ColourControls.h  ColourCorrect.h
base/src/: ColourBrightness.cpp
